exports[`prefer-mock-call-count > invalid(1): import test from 'node:test';\nconst spy = test.mock.fn();\nassert.equal(spy.mock.calls.length, 1); 1`] = `

  1 | import test from 'node:test';
  2 | const spy = test.mock.fn();
  3 | assert.equal(spy.mock.calls.length, 1);

`;

exports[`prefer-mock-call-count > invalid(1): import test from 'node:test';\nconst spy = test.mock.fn();\nassert.equal(spy.mock.calls.length, 1); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | const spy = test.mock.fn();
> 3 | assert.equal(spy.mock.calls.length, 1);
    |              ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | const spy = test.mock.fn();
  3 | assert.equal(spy.mock.callCount(), 1);

`;

exports[`prefer-mock-call-count > invalid(2): import test from 'node:test';\nobject.method.mock.calls.length; 1`] = `

  1 | import test from 'node:test';
  2 | object.method.mock.calls.length;

`;

exports[`prefer-mock-call-count > invalid(2): import test from 'node:test';\nobject.method.mock.calls.length; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | object.method.mock.calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`object.method.mock.callCount()\` over \`object.method.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | object.method.mock.callCount();

`;

exports[`prefer-mock-call-count > invalid(3): import test from 'node:test';\nString(spy.mock.calls.length); 1`] = `

  1 | import test from 'node:test';
  2 | String(spy.mock.calls.length);

`;

exports[`prefer-mock-call-count > invalid(3): import test from 'node:test';\nString(spy.mock.calls.length); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | String(spy.mock.calls.length);
    |        ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | String(spy.mock.callCount());

`;

exports[`prefer-mock-call-count > invalid(4): import test from 'node:test';\n(spy.mock.calls).length; 1`] = `

  1 | import test from 'node:test';
  2 | (spy.mock.calls).length;

`;

exports[`prefer-mock-call-count > invalid(4): import test from 'node:test';\n(spy.mock.calls).length; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | (spy.mock.calls).length;
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | spy.mock.callCount();

`;

exports[`prefer-mock-call-count > invalid(5): import test from 'node:test';\nconst fake = {mock: {calls: []}};\nfake.mock.calls.length; 1`] = `

  1 | import test from 'node:test';
  2 | const fake = {mock: {calls: []}};
  3 | fake.mock.calls.length;

`;

exports[`prefer-mock-call-count > invalid(5): import test from 'node:test';\nconst fake = {mock: {calls: []}};\nfake.mock.calls.length; 2`] = `

Message:
  1 | import test from 'node:test';
  2 | const fake = {mock: {calls: []}};
> 3 | fake.mock.calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`fake.mock.callCount()\` over \`fake.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | const fake = {mock: {calls: []}};
  3 | fake.mock.callCount();

`;

exports[`prefer-mock-call-count > invalid(6): import test from 'node:test';\nspy.mock /* comment */ .calls.length; 1`] = `

  1 | import test from 'node:test';
  2 | spy.mock /* comment */ .calls.length;

`;

exports[`prefer-mock-call-count > invalid(6): import test from 'node:test';\nspy.mock /* comment */ .calls.length; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | spy.mock /* comment */ .calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

`;
